--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,15 +1,7 @@
-# Change 'comments' to true for Disqus comments
-disqus:
-  comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
-
-# If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: ''
-
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'Impressum / Legal Notice', path: 'menu', url: 'impressum.html'}
+- {name: 'Privacy', path: 'menu', url: 'privacy.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
